# calculadora-fiis

./: .gitignore  CNAME  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
app/: Dockerfile  calculator.py  main.py  requirements.txt  utils.py  wsgi.ini
app/static/: style.css
app/static/styles/: style.css
app/templates/: about.html  index.html
kubernetes/: deploy.yaml
static/styles/: style.css
templates/: index.html
tests/: resquest.http
